Tweaked the filter in Enum*sOps to take a Predicate, overloaded it with two convenience setters, and added relevant tests